syntax = "proto3";
package com.vang;
option java_package = "com.vang.folder_service.grpc.generated";
option java_multiple_files = true;
option java_outer_classname = "AuthUserClient";

service GetAuthUserInformation {
  rpc getAuthUserInfo(GetAuthUserInformationRequest) returns (GetAuthUserInformationResponse);
}

message GetAuthUserInformationRequest {
  int32 type = 1;
}

message GetAuthUserInformationResponse {
  bool status = 1;
  string username = 2;
}